@@ -1,5 +1,6 @@
 2016-01-06 David Hohn <david.hohn@cern.ch>
 	* migrate to Top,2.3.39
+	* enabling tau SFs from AnalysisTop, removing my private implementation
 
 2016-01-06 David Hohn <david.hohn@cern.ch>
 	* add config file for running Systematics: tighten object selection to strawman, add skim
